--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.coolweather.android"
-        minSdkVersion 30
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -36,4 +36,14 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //LitePal用于对数据库操作
+    implementation 'org.litepal.android:core:1.3.2'
+    //用于网络数据请求
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    //GSON用于解析JSON数据
+    implementation 'com.google.code.gson:gson:2.8.2'
+    //Glide用于加载和展示图片
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 }
